--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ScratchJr",
     "productName": "ScratchJr",
-    "version": "1.3.2",
+    "version": "1.4.2",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
@@ -15,6 +15,12 @@
         "publish": "electron-forge publish",
         "lint": "eslint src --color"
     },
+    "fileAssociations": [
+        {
+            "ext": "algo",
+            "description": "ScratchJr project"
+        }
+    ],
     "keywords": [],
     "author": "ScratchJr - Open Source Community Port",
     "license": "MIT",
