Обновление .gitignore, версия пакета до 1.5.5, добавление поддержки файлов sjr, улучшение обработки проектов и ассетов из SJR архивов.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ src/app/src/editor/.DS_Store
 .DS_Store
 buglist.txt
 src/debug.log
+logs-from-app
+project_examples
+scratchjr-importer-exporter-main
