Добавление поддержки форматов проектов SJR и ALGO, улучшение обработки сохранения проектов, обновление интерфейса для выбора формата проекта.

--- a/src/app/settings.json
+++ b/src/app/settings.json
@@ -33,5 +33,10 @@
         "ไทย": "th",
         "简体中文": "zh-cn"
     },
+    "supportedProjectExtensions": {
+        "SJR": "sjr",
+        "ALGO": "algo"
+    },
+    "defaultProjectExtension": "sjr",
     "settingsPageDisabled": false
 }
